--- a/srs_environments/param/dm_simple_english.yaml
+++ b/srs_environments/param/dm_simple_english.yaml
@@ -1,4 +1,5 @@
 srs/language: 'English'
-srs/grasping_type: 'Simple'
-srs/detection_type: 'Assisted' 
+srs/grasping_type: 'Planned'
+srs/ipa_arm_navigation: 'False'
+srs/detection_type: 'Simple' 
 srs/enviroment_confirmation: 'False'
