--- a/srs_knowledge/conf/srs-milano2012.cfg
+++ b/srs_knowledge/conf/srs-milano2012.cfg
@@ -18,5 +18,5 @@ taskfile task1.seq
 env_namespace http://www.srs-project.eu/ontologies/srs-milano2012.owl#
 ont_namespace http://www.srs-project.eu/ontologies/srs.owl#
 map_name srs-milano2012
-grasp_mode move_and_grasp
-#grasp_mode just_grasp
+#grasp_mode move_and_grasp
+grasp_mode just_grasp
