--- a/srs_environments/param/dm_simple_with_enviroment_update_english.yaml
+++ b/srs_environments/param/dm_simple_with_enviroment_update_english.yaml
@@ -1,4 +1,4 @@
 srs/language: 'English'
 srs/grasping_type: 'Simple'
-srs/detection_type: 'Simple' 
-srs/enviroment_confirmation: 'True'
+srs/detection_type: 'Assisted' 
+srs/enviroment_confirmation: 'False'
