--- a/srs_body_detector/CMakeLists.txt
+++ b/srs_body_detector/CMakeLists.txt
@@ -26,5 +26,7 @@ rosbuild_gensrv()
 #target_link_libraries(${PROJECT_NAME} another_library)
 #rosbuild_add_boost_directories()
 #rosbuild_link_boost(${PROJECT_NAME} thread)
-#rosbuild_add_executable(example examples/example.cpp)
+
+rosbuild_add_executable(srs_body_detector src/srs_body_detector.cpp)
+
 #target_link_libraries(example ${PROJECT_NAME})
