--- a/srs_knowledge/conf/milan-site.cfg.in
+++ b/srs_knowledge/conf/milan-site.cfg.in
@@ -18,5 +18,5 @@ taskfile task1.seq
 env_namespace http://www.srs-project.eu/ontologies/milan-site.owl#
 ont_namespace http://www.srs-project.eu/ontologies/srs.owl#
 map_name milan-site
-grasp_mode move_and_grasp
+#grasp_mode move_and_grasp
 #grasp_mode just_grasp
