--- a/srs_knowledge/conf/srsknow-empty.cfg.in
+++ b/srs_knowledge/conf/srsknow-empty.cfg.in
@@ -17,5 +17,5 @@ taskfile task1.seq
 env_namespace http://www.srs-project.eu/ontologies/empty-map.owl#
 ont_namespace http://www.srs-project.eu/ontologies/srs.owl#
 map_name empty-map
-grasp_mode move_and_grasp
+#grasp_mode move_and_grasp
 #grasp_mode just_grasp
