language automaticaly detected. some bugs fixed after removing srsspatialinfo from sym_ground pkg

--- a/srs_knowledge/conf/ontologies/ipa-kitchen/ipa-kitchen.owl.in
+++ b/srs_knowledge/conf/ontologies/ipa-kitchen/ipa-kitchen.owl.in
@@ -204,6 +204,9 @@
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.1</srs:lengthOfObject>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.2</srs:heightOfObject>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">12</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Flasche</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Bottle</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">bottiglia</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -238,6 +241,9 @@
         <srs:heightOfObject rdf:datatype="&xsd;float">0.85</srs:heightOfObject>
         <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">6</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Spulmaschine</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Dishwasher</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">lavastoviglie</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -260,6 +266,9 @@
         <srs:yCoord rdf:datatype="&xsd;float">1.36</srs:yCoord>
         <srs:heightOfObject rdf:datatype="&xsd;float">1.4</srs:heightOfObject>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">4</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Kuhlschrank</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Fridge</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Frigorifero</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -287,6 +296,9 @@
         <srs:zCoord rdf:datatype="&xsd;float">0.90</srs:zCoord>
         <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">9</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Milch</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Milkbox</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Latte</srs:objectReadableName>
         <srs:aboveOf rdf:resource="&ipa-kitchen;Dishwasher0"/>
     </owl:NamedIndividual>
     
@@ -310,6 +322,9 @@
         <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">1</srs:houseHoldObjectID>
         <srs:heightOfObject rdf:datatype="&xsd;float">1.4</srs:heightOfObject>
+        <srs:objectReadableName xml:lang="de">Backofen</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Oven</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Forno</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -329,6 +344,9 @@
         <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:yCoord rdf:datatype="&xsd;float">1.26</srs:yCoord>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">10</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Crisps (Pringles)</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Crisps (Brand: Pringles)</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">patatine (Pringles)</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -372,6 +390,9 @@
         <srs:lengthOfObject rdf:datatype="&xsd;float">0.1</srs:lengthOfObject>
         <srs:heightOfObject rdf:datatype="&xsd;float">0.2</srs:heightOfObject>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">11</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Salz</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Salt</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Sale</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -394,6 +415,9 @@
         <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:heightOfObject rdf:datatype="&xsd;float">1.4</srs:heightOfObject>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">2</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Sinken</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Sink</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Affondare</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -416,6 +440,9 @@
         <srs:widthOfObject rdf:datatype="&xsd;float">1.75</srs:widthOfObject>
         <srs:xCoord rdf:datatype="&xsd;float">2.625</srs:xCoord>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">5</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Sofa</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Sofa in Living room</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Divano</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -438,6 +465,9 @@
         <srs:heightOfObject rdf:datatype="&xsd;float">0.85</srs:heightOfObject>
         <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">3</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Herd</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Stove</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Stufa</srs:objectReadableName>
     </owl:NamedIndividual>
     
 
@@ -460,6 +490,9 @@
         <srs:qu rdf:datatype="&xsd;float">1</srs:qu>
         <srs:yCoord rdf:datatype="&xsd;float">1.26</srs:yCoord>
         <srs:houseHoldObjectID rdf:datatype="&xsd;int">7</srs:houseHoldObjectID>
+        <srs:objectReadableName xml:lang="de">Kuche Tabelle</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Kitchen Table</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Cucina Tavolo</srs:objectReadableName>
         <srs:inFrontOf-Generally rdf:resource="&ipa-kitchen;Sofa0"/>
     </owl:NamedIndividual>
     
