--- a/srs_environments/param/dm_simple_italian.yaml
+++ b/srs_environments/param/dm_simple_italian.yaml
@@ -1,4 +1,5 @@
 srs/language: 'Italian'
+srs/language_short: 'it'
 srs/grasping_type: 'Simple'
 srs/detection_type: 'Simple' 
 srs/enviroment_confirmation: 'False'
