param language_short (en/it) added

--- a/srs_environments/param/dm_assisted_grasp.yaml
+++ b/srs_environments/param/dm_assisted_grasp.yaml
@@ -1,4 +1,5 @@
 srs/language: 'English'
+srs/language_short: 'en'
 srs/grasping_type: 'Assisted'
 srs/detection_type: 'Simple' 
 srs/enviroment_confirmation: 'False'
