--- a/srs_leg_detector/CMakeLists.txt
+++ b/srs_leg_detector/CMakeLists.txt
@@ -1,4 +1,5 @@
 cmake_minimum_required(VERSION 2.4.6)
+
 include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 # Set the build type.  Options are:
@@ -38,6 +39,6 @@ rosbuild_add_executable(train_leg_detector
                        src/laser_processor.cpp
                        src/train_leg_detector.cpp 
                        src/calc_leg_features.cpp)
-
+rosbuild_add_compile_flags(train_leg_detector -fpermissive) 
 rosbuild_add_executable(legListener
                          src/legListener.cpp)
