room attribute added to returned predefined poses and workspaces.

--- a/srs_knowledge/conf/ontologies/ipa-kitchen/ipa-kitchen.owl.in
+++ b/srs_knowledge/conf/ontologies/ipa-kitchen/ipa-kitchen.owl.in
@@ -219,6 +219,10 @@
         <srs:xCoordinate rdf:datatype="&xsd;float">1</srs:xCoordinate>
         <srs:orientationTheta rdf:datatype="&xsd;float">1.57</srs:orientationTheta>
         <ipa-kitchen:inSRSCoordinateFormat rdf:datatype="&rdfs;Literal">[1 -1.6 1.57]</ipa-kitchen:inSRSCoordinateFormat>
+        <srs:objectReadableName xml:lang="de">Ladestation</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Charging Station</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">stazione di ricarica</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -244,6 +248,7 @@
         <srs:objectReadableName xml:lang="de">Spulmaschine</srs:objectReadableName>
         <srs:objectReadableName xml:lang="en">Dishwasher</srs:objectReadableName>
         <srs:objectReadableName xml:lang="it">lavastoviglie</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -269,6 +274,7 @@
         <srs:objectReadableName xml:lang="de">Kuhlschrank</srs:objectReadableName>
         <srs:objectReadableName xml:lang="en">Fridge</srs:objectReadableName>
         <srs:objectReadableName xml:lang="it">Frigorifero</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -325,6 +331,7 @@
         <srs:objectReadableName xml:lang="de">Backofen</srs:objectReadableName>
         <srs:objectReadableName xml:lang="en">Oven</srs:objectReadableName>
         <srs:objectReadableName xml:lang="it">Forno</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -418,6 +425,7 @@
         <srs:objectReadableName xml:lang="de">Sinken</srs:objectReadableName>
         <srs:objectReadableName xml:lang="en">Sink</srs:objectReadableName>
         <srs:objectReadableName xml:lang="it">Affondare</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -443,6 +451,7 @@
         <srs:objectReadableName xml:lang="de">Sofa</srs:objectReadableName>
         <srs:objectReadableName xml:lang="en">Sofa in Living room</srs:objectReadableName>
         <srs:objectReadableName xml:lang="it">Divano</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -468,6 +477,7 @@
         <srs:objectReadableName xml:lang="de">Herd</srs:objectReadableName>
         <srs:objectReadableName xml:lang="en">Stove</srs:objectReadableName>
         <srs:objectReadableName xml:lang="it">Stufa</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -494,6 +504,7 @@
         <srs:objectReadableName xml:lang="en">Kitchen Table</srs:objectReadableName>
         <srs:objectReadableName xml:lang="it">Cucina Tavolo</srs:objectReadableName>
         <srs:inFrontOf-Generally rdf:resource="&ipa-kitchen;Sofa0"/>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -517,6 +528,10 @@
         <srs:yCoordinate rdf:datatype="&xsd;float">0</srs:yCoordinate>
         <srs:orientationTheta rdf:datatype="&xsd;float">0</srs:orientationTheta>
         <ipa-kitchen:inSRSCoordinateFormat rdf:datatype="&rdfs;Literal">[0 0 0]</ipa-kitchen:inSRSCoordinateFormat>
+        <srs:objectReadableName xml:lang="de">Roboter Ausgangsposition</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Robot Home Position</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">robot posizione iniziale</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -537,6 +552,10 @@
         <srs:orientationTheta rdf:datatype="&xsd;float">0</srs:orientationTheta>
         <srs:yCoordinate rdf:datatype="&xsd;float">0.3</srs:yCoordinate>
         <ipa-kitchen:inSRSCoordinateFormat rdf:datatype="&rdfs;Literal">[-2.04 0.3 0]</ipa-kitchen:inSRSCoordinateFormat>
+        <srs:objectReadableName xml:lang="de">Kuche</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">IPA Kitchen</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">cucina</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -549,6 +568,10 @@
         <srs:xCoordinate rdf:datatype="&xsd;float">-2.04</srs:xCoordinate>
         <srs:orientationTheta rdf:datatype="&xsd;float">3.14</srs:orientationTheta>
         <ipa-kitchen:inSRSCoordinateFormat rdf:datatype="&rdfs;Literal">[-2.04 -0.3 3.14]</ipa-kitchen:inSRSCoordinateFormat>
+        <srs:objectReadableName xml:lang="de">Kuche (ruckwarts)</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Kitchen (Backward)</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">Cucina (indietro)</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -561,6 +584,10 @@
         <srs:orientationTheta rdf:datatype="&xsd;float">0</srs:orientationTheta>
         <srs:yCoordinate rdf:datatype="&xsd;float">0</srs:yCoordinate>
         <ipa-kitchen:inSRSCoordinateFormat rdf:datatype="&rdfs;Literal">[-2.14 0.0 0]</ipa-kitchen:inSRSCoordinateFormat>
+        <srs:objectReadableName xml:lang="de">Kuche</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">Kitchen </srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">cucina</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
     
 
@@ -573,6 +600,10 @@
         <srs:orientationTheta rdf:datatype="&xsd;float">0.75</srs:orientationTheta>
         <srs:xCoordinate rdf:datatype="&xsd;float">1.47</srs:xCoordinate>
         <ipa-kitchen:inSRSCoordinateFormat rdf:datatype="&rdfs;Literal">[1.47 -0.7 0.75]</ipa-kitchen:inSRSCoordinateFormat>
+        <srs:objectReadableName xml:lang="de">Benutzer (Bestellen Position)</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="en">User (Order Position)</srs:objectReadableName>
+        <srs:objectReadableName xml:lang="it">utente (ordine di posizione)</srs:objectReadableName>
+        <srs:insideOf rdf:resource="&ipa-kitchen;ipa-kitchen"/>
     </owl:NamedIndividual>
 </rdf:RDF>
 
