--- a/srs_environments/param/dm_planned_grasp.yaml
+++ b/srs_environments/param/dm_planned_grasp.yaml
@@ -1,6 +1,6 @@
 srs/language: 'English'
 srs/language_short: 'en'
 srs/grasping_type: 'Planned'
-srs/ipa_arm_navigation: 'True'
+srs/ipa_arm_navigation: 'False'
 srs/detection_type: 'Simple' 
 srs/enviroment_confirmation: 'False'
