--- a/srs_grasping/CMakeLists.txt
+++ b/srs_grasping/CMakeLists.txt
@@ -12,7 +12,7 @@ include($ENV{ROS_ROOT}/core/rosbuild/rosbuild.cmake)
 
 rosbuild_find_ros_package(actionlib_msgs)
 include(${actionlib_msgs_PACKAGE_PATH}/cmake/actionbuild.cmake)
-genaction()
+#genaction()
 
 rosbuild_init()
 rosbuild_genmsg()
